# pdf-book-digitizer

./: AGENTS.md  README.md  pyproject.toml
src/pdf_book_digitizer/: __init__.py  assemble.py  cli.py  cli_extract_pages.py  cli_fix_raw_ocr_results.py  cli_images.py  config.py  diffs.py  hard_line_breaks.py  image_inputs.py  images.py  manual_editor.py  models.py  ocr.py  pdf_render.py  pipeline.py  postprocess.py  text_cleanup.py  text_fix.py
tests/: test_fix_raw_ocr_results.py  test_hard_line_breaks.py  test_manual_editor.py  test_ocr.py  test_pipeline.py  test_postprocess.py  test_text_fix.py
tests/test_data/pride_and_prejudice/ocr/raw/: page0001.md
tests/test_data/pride_and_prejudice/ocr_ground_truth/new/: page0001.md
tests/test_data/水浒传/ocr/raw/: page-0001.md
tests/test_data/水浒传/ocr_ground_truth/new/: page-0001.md
tests/test_data/水浒传_extract_footnote/: free_ocr_page_text_out.md  normalized.md
