[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-book-digitizer"
version = "0.1.1"
description = "Render PDF pages and OCR page images into per-page Markdown."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ollama>=0.4.7",
  "PyMuPDF>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
digitize-book = "pdf_book_digitizer.cli:main"
digitize-images = "pdf_book_digitizer.cli_images:main"
extract-pdf-pages = "pdf_book_digitizer.cli_extract_pages:main"
inspect-ocr-pages = "pdf_book_digitizer.manual_editor:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
